# actix-yew-live-tmpl

./: Cargo.toml  LICENSE  README.md  cert.pem  client.sh  hotrun.sh  key.pem  ssc.sh
src/: client.rs  db.rs  main.rs  server.rs  tls.rs  ws.rs  ws_var.rs
yew/: Cargo.toml  hotrun.sh  package.json  webpack.config.js
yew/src/: app.rs  lib.rs
yew/static/: index.html
